package types

type Meteo int

const (
	RAINY Meteo = iota
	DRY
	HEAT
)
